Fixed unbroken word wrap in log panes

--- a/webui/css/main.css
+++ b/webui/css/main.css
@@ -156,8 +156,9 @@ span.deleteicon input {
 .popupdialog h3 { font-weight:bold; font-size:11px; margin:20px 0 15px 0 }
 .popupdialog h3:first-of-type { margin-top:5px }
 /* Log Dialog */
-#leftlog { width:49%; min-height:100%; float:left; border-right:1px solid #333 }
-#rightlog { width:49%; height:100%; float:right }
+.logpane { width:49%; word-wrap: break-word; }
+#leftlog { min-height:100%; float:left; border-right:1px solid #333 }
+#rightlog { height:100%; float:right }
 /* Help Dialog */
 .colourbar { text-align:center; width:80%; margin-left:10% }
 .greybg { background:#111; padding:5px }
